# Todo-Spec-Driven

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/cli-menu-enhancement/: 1-create-menu-enhancement-spec.spec.prompt.md
history/prompts/constitution/: 1-create-initial-constitution.constitution.prompt.md
history/prompts/todo-console-app/: 2-create-todo-spec.spec.prompt.md  3-plan-todo-console-app.plan.prompt.md  4-create-todo-tasks.tasks.prompt.md  5-implement-todo-app.tasks.prompt.md
specs/001-cli-menu-enhancement/: plan.md  spec.md  tasks.md
specs/001-cli-menu-enhancement/checklists/: requirements.md
specs/001-todo-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-console-app/checklists/: requirements.md
specs/001-todo-console-app/contracts/: todo-api.md
src/cli/: main.py
src/models/: todo.py
src/services/: todo_service.py
tests/unit/: test_todo.py
