[project]
name = "todo-console-app"
version = "0.1.0"
description = "A simple in-memory todo application built with Python"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Developer", email = "developer@example.com"}
]

[project.scripts]
todo-app = "src.cli.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]